# python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.continue/mcpServers/: new-mcp-server.yaml
scripts/: example_arithm.py
src/: arithm.py
src/arithm/: __init__.py
tests/: test_arithm.py
