[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
example-script = "scripts.example_script:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]
