[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arithm",
    "example-cli",
]


[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
arithm = {workspace = true}
example-cli = {workspace=true}

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit"
]

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [".venv"]

[tool.ruff.lint]
extend-select = ["I"]
